2016-11-22  Per Bothner  <per@bothner.com>

	* Makefile.am: Fixes so 'make install' twice in a row works.

2016-11-20  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.2.1.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2016-11-12  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.2.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2016-11-07  Per Bothner  <per@bothner.com>

	* bin/browse-kawa-manual.in: Move to doc/browse-kawa-manual.
	It's no longer suggested because of the link issue mentioned.
	* Makefile.am: No longer include it in snapshots.
	* configure.ac: Don't configure bin/browse-kawa-manual.in.

2016-11-02  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.1.91.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2016-11-01  Per Bothner  <per@bothner.com>

	* configure.ac: Remove obsolete --with-jline2 option.
	* Makefile.am: Update accordingly.
	* source-list: Update accordingly.

2016-10-29  Per Bothner  <per@bothner.com>

	* source-list: Don't build gnu.kawa.models unless WITH_AWT.
	* Makefile.am (PREPROCESS_AWT): Set (or not) use:java.awt PreProcess
	option, depending on WITH_AWT.
	* configure.ac: Option --with-swing defaults to no if --without-awt.

2016-10-16  Per Bothner  <per@bothner.com>

	* configure.ac: Make maintainer-mode the default.
	Put info files in builddir.
	* Makefile.am (tmp-sources1.list): Also depend on Makefile.am.

2016-10-16  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (generate-simplevector-files)
	(clean-generated-simplevector-files): New targets to generate and
	clean PrimVector.template-based source files.

2016-10-13  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (lib-scm-classes): Update for new libraries (kawa
	process-keywords) and (kawa swing).

2016-09-03  Per Bothner  <per@bothner.com>
